--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -2,11 +2,14 @@ $theme-color: #C00404;
 $title-color: #101010;
 $title-color-active: #1C5A97;
 $c-size: 1200px;
+$header-height: 40px;
 *{
   margin: 0px;
   padding: 0px;
 }
-
+.theme-color{
+  color: #C00404;
+}
 li{
   list-style: none;
   list-style-position: outside;
@@ -14,6 +17,11 @@ li{
 }
 a{
   text-decoration: none
+}
+::-webkit-scrollbar{  
+    width: 7px;  
+    height: 7px;  
+    background-color: #aaa;  
 }
 
 /* 主题颜色 */
@@ -27,7 +35,73 @@ a{
   border: 1px solid $theme-color
 }
 
-/* 公用样式 */
+/* 公用样式 定制化*/
+.c-main-box {
+  width: $c-size;
+  margin: 0 auto;
+}
+.line-title {
+  color: $title-color;
+  width: 100%;
+  overflow: hidden;
+  text-overflow:ellipsis; 
+  white-space: nowrap;
+  display: inline-block;
+  vertical-align: top;
+}
+.line-title:hover {
+  color: $title-color-active;
+}
+ul.tab-list-box{
+  display: block;
+  width: 100%;
+  text-align: left;
+}
+ul.tab-list-box>li {
+  height: 40px;
+  line-height: 40px;
+  overflow: hidden;
+  position: relative;
+  font-size: 14px;
+  border-bottom: #e5e5e5 solid 1px;
+}
+ul.tab-list-box>li>a{
+  display: flex;
+}
+ul.tab-list-box>li>a>.el-row{
+  width: 100%;
+}
+ul.tab-list-box i{
+  color: $title-color;
+  margin-right: 10px;
+}
+h2.line-head{
+  height: 100%;
+  vertical-align: bottom;
+  border-bottom: 1px solid #e0e0e0;
+  line-height: 80px;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.b-b {
+  border-bottom: 1px solid #e0e0e0;
+}
+.m-b-80{
+  margin-bottom: 80px;
+}
+.text-indent-sm{
+  text-indent: 28px
+}
+.text-indent-md{
+  text-indent: 32px
+}
+/**/
+
+/* 公用样式 非定制化*/
 .m-t-sm {
   margin-top: 10px;
 }
@@ -48,10 +122,88 @@ a{
   margin-bottom: 20px;
 }
 .m-l-md {
-  margin-left: 2px;
+  margin-left: 20px;
 }
 .m-r-md {
   margin-right: 20px;
+}
+
+.m-t-lg {
+  margin-top: 30px;
+}
+.m-b-lg {
+  margin-bottom: 30px;
+}
+.m-l-lg {
+  margin-left: 30px;
+}
+.m-r-lg {
+  margin-right: 30px;
+}
+
+.m-t-llg {
+  margin-top: 40px;
+}
+.m-b-llg {
+  margin-bottom: 40px;
+}
+.m-l-llg {
+  margin-left: 40px;
+}
+.m-r-llg {
+  margin-right: 40px;
+}
+
+.p-l-sm {
+  padding-left: 10px;
+}
+.p-t-sm {
+  padding-top: 10px;
+}
+.p-r-sm {
+  padding-right: 10px;
+}
+.p-b-sm {
+  padding-bottom: 10px;
+}
+
+.p-l-md {
+  padding-left: 20px;
+}
+.p-t-md {
+  padding-top: 20px;
+}
+.p-r-md {
+  padding-right: 20px;
+}
+.p-b-md {
+  padding-bottom: 20px;
+}
+
+.p-l-lg {
+  padding-left: 30px;
+}
+.p-t-lg {
+  padding-top: 30px;
+}
+.p-r-lg {
+  padding-right: 30px;
+}
+.p-b-lg {
+  padding-bottom: 30px;
+}
+
+.p-l-llg {
+  padding-left: 40px;
+}
+.p-t-llg {
+  padding-top: 40px;
+}
+.p-r-llg {
+  padding-right: 40px;
+}
+.p-b-llg {
+  padding-bottom: 40px;
 }
 
 .text-center {
